# pygobject-gtk-win32

./: CMakeLists.txt  config.h
gio/: gio.c
glib/: pyglib.def
gobject/: pygboxed.c  pygenum.c  pygflags.c  pygobject.c  pygpointer.c
